@startuml
!pragma layout smetana
skinparam classAttributeIconSize 0

class users {
  - name
  - address
  - email
  - password
  - phone_number
  - role
}

class zipcode {
  - zipcode
  - city
}

class order {
  - carport_width
  - carport_length
  - roof
  - user_text
  - admin_text
  - sales_price
  - created_at
}

class order_status {
  - status
}

class component {
  - quantity
  - use_description
}

class material_variant {
  - length
}

class material {
  - name
  - unit
  - price
}

class admin {
  - username
  - password
}

' Relationer
users *-- order : places
users o-- zipcode : lives in
order *-- component : contains
order o-- order_status : has
component *-- material_variant : uses
material_variant o-- material : based on

@enduml


implements ..|>
extends <|-- (is-a)
composition *-- (must-have)
Aggregation o-- (can-have)
Associering <--